# ummon

./: .gitignore  CLAUDE.md  Cargo.toml  ISSUE_QUERY_PATTERNS.md  README.md  Test.java  test_mcp_client.js
.github/workflows/: rust.yml
.mentat/: precommit.sh  setup.sh
benches/: parsing_benchmarks.rs
docs/: index.md  llm_domain_extraction.md  mcp_integration.md  query_system.md
docs/features/: domain-extraction.md  knowledge-graph.md  query-system.md  relevance-agent.md
docs/getting-started/: installation.md  quick-start.md
docs/improvements/: README.md  caching.md  code_suggestions.md  documentation.md  git_integration.md  impact_analysis.md  language_support.md  performance.md  testing.md  visualization.md  web_interface.md
docs/reference/: cli-reference.md  configuration.md
src/: cli.rs  db.rs  lib.rs  main.rs
src/agent/: mod.rs  relevance_agent.rs
src/commands/: assist.rs  index.rs  migrate.rs  mod.rs  query.rs  serve.rs
src/graph/: entity.rs  knowledge_graph.rs  mod.rs  relationship.rs
src/mcp_core/: errors.rs  mod.rs  router.rs  types.rs
src/mcp_server/: mod.rs  router.rs  server.rs  tests.rs  transport.rs
src/parser/: call_graph.rs  domain_model.rs  language_support.rs  mod.rs
src/parser/language_support/: java.rs  javascript.rs  mod.rs  python.rs  rust.rs
src/prompt/: context_builder.rs  domain_extraction.rs  llm_integration.rs  mod.rs
src/query/: db_executor.rs  executor.rs  formatter.rs  grammar.pest  mod.rs  nl_translator.rs  parser.rs
src/server/: analysis.rs  domain.rs  handlers.rs  mod.rs  models.rs  routes.rs  utils.rs
test/java/: ComplexExample.java
test/javascript/: mcp_client.js  stdin_client.js
