[package]
name = "ummon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
walkdir = "2.3"
once_cell = "1.8"
ignore = "0.4"
# MCP Server dependencies
axum = { version = "0.6", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.4", features = ["cors", "trace"], optional = true }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
futures = "0.3"

[features]
default = []
http = ["axum", "tower", "tower-http"]
