[package]
name = "ummon"
version = "0.1.0"
edition = "2021"

[lib]
name = "ummon"
path = "src/lib.rs"

[[bin]]
name = "ummon"
path = "src/main.rs"

[[bench]]
name = "parsing_benchmarks"
harness = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-java = "0.20"
walkdir = "2.3"
once_cell = "1.8"
ignore = "0.4"
indoc = "1.0"
# Database dependencies
rusqlite = { version = "0.29", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
pest = "2.7"
pest_derive = "2.7"
regex = "1.8"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[features]
default = []
